--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Sagnik Ray Choudhury"
   avatar           : "profile.jpeg"
-  bio              : "Applied NLP/ML researcher/engineer. Postdoc @UCPH, Engineer @Interactions, Phd @Penn State"
-  location         : "Copenhagen"
+  bio              : "Applied NLP/ML researcher/engineer. Clinical IE  @UMich, Explainability @UPCH, Dialog systems @Interactions, Scholarly IE @Penn State."
+  location         : "Ann Arbor"
   employer         :
   dblp             : "https://dblp.org/pid/132/5374.html"
   googlescholar    : "https://scholar.google.com/citations?user=WJ2BzBgAAAAJ&hl=en&oi=ao"
